add CURL based registration service

--- a/quickstart/docker-compose/docker-compose.yml
+++ b/quickstart/docker-compose/docker-compose.yml
@@ -73,16 +73,29 @@ services:
     depends_on:
       - a3s
 
-  newman:
-   container_name: register-contract-dokuti
-   networks:
-     - dokuti-quickstart    
-   image: "postman/newman_alpine33" 
-   command: run /etc/newman/DOKUTI.register-a3s-contract.postman_collection.json --global-var client-id='a3s-default' --global-var client-secret='secret'  --global-var a3s-host=http://a3s:80 --global-var auth-server-base-url=http://a3s-identity-server --delay-request 15000  
-   volumes:
-       - ../../postman:/etc/newman
-   depends_on:
-     - a3s-identity-server
+  # newman:
+  #  container_name: register-contract-dokuti
+  #  networks:
+  #    - dokuti-quickstart    
+  #  image: "postman/newman_alpine33" 
+  #  command: run /etc/newman/DOKUTI.register-a3s-contract.postman_collection.json --global-var client-id='a3s-default' --global-var client-secret='secret'  --global-var a3s-host=http://a3s:80 --global-var auth-server-base-url=http://a3s-identity-server --delay-request 15000  
+  #  volumes:
+  #      - ../../postman:/etc/newman
+  #  depends_on:
+  #    - a3s-identity-server
+
+  register-security-contract:
+  networks:
+    - dokuti-quickstart
+  image: "endeveit/docker-jq"
+  volumes:
+    - ./scripts/:/scripts
+    - ../../doc/a3s-security-contract.yaml:/scripts/contract.yaml     
+  depends_on:
+    - a3s-identity-server   
+    - web
+  command: sh -c '/scripts/wait-for.sh a3s-identity-server:80 -- /scripts/register-contract.sh '  
+
 
 networks:
   dokuti-quickstart:            
