--- a/quickstart/docker-compose/docker-compose.yml
+++ b/quickstart/docker-compose/docker-compose.yml
@@ -94,7 +94,7 @@ services:
       - ../../doc/a3s-security-contract.yaml:/scripts/contract.yaml     
     depends_on:
       - a3s-identity-server   
-      - web
+      - dokuti
     command: sh -c '/scripts/wait-for.sh a3s-identity-server:80 -- /scripts/register-contract.sh '  
 
 
