attempt using the working directory to locate target folder

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -98,7 +98,7 @@ jobs:
                 -Dsonar.login=$SONAR_AUTH_TOKEN \
                 -Dsonar.branch.name=$CIRCLE_BRANCH \
                 -Dsonar.exclusions=srcgen/**/*
-                -Dsonar.jacoco.reportPaths=target/jacoco.exec                 
+                -Dsonar.jacoco.reportPaths=~/dokuti-sonarqube/target/jacoco.exec                 
   tagged-docker-build:
     docker:
       - image: docker
