--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -98,7 +98,7 @@ jobs:
                 -Dsonar.login=$SONAR_AUTH_TOKEN \
                 -Dsonar.branch.name=$CIRCLE_BRANCH \
                 -Dsonar.exclusions=srcgen/**/* \
-                -Dsonar.coverageReportPaths=target/jacoco.exec
+                -Dsonar.coverageReportPaths=target/jacoco.exec \
                 -Dsonar.jacoco.reportPaths=target/jacoco.exec
       - store_artifacts:
          path:  target          
