--- a/doc/dokuti_api.yml
+++ b/doc/dokuti_api.yml
@@ -399,7 +399,7 @@ paths:
       tags:
         - Documents
       summary: Gets the  permissions for a document.
-      description: Gets  permissions for a document.
+      description: Gets  permissions for a document.  Permissions array of one or more values "READ", "WRITE", "ROLLBACK", "ARCHIVE".
       operationId: getDocumentAcl
       parameters:
         - in: path
@@ -913,7 +913,7 @@ paths:
       tags:
         - Documents
       summary: Sharing with another user or a team
-      description: Sharing with another user or a team (both are identified by UUID)
+      description: Sharing with another user or a team (both are identified by UUID). Permissions array of one or more values "READ", "WRITE", "ROLLBACK", "ARCHIVE".
       operationId: shareDocument
       requestBody:
         content:
@@ -968,7 +968,7 @@ paths:
       tags:
         - Documents
       summary: Unsharing with another user or a team
-      description: Unsharing with another user or a team (both are identified by UUID)
+      description: Unsharing with another user or a team (both are identified by UUID). Permissions array of one or more values "READ", "WRITE", "ROLLBACK", "ARCHIVE".
       operationId: unShareDocument
       requestBody:
         content:
@@ -2141,19 +2141,20 @@ components:
           type: string
           minLength: 1
           maxLength: 255
+          example: aede8743-1bb8-407d-a975-77f3085a0d76
         permissions:
           type: array
           items:
             type: string
             minLength: 0
-            maxLength: 255        
-
+            maxLength: 255  
+            example: READ
     CommonPermissionList:    
       description: allowed document's permission for non-current user
       type: array
       items:
         $ref: '#/components/schemas/Permission'
-        
+
     SharedObject:
       description: A single  shared object
       required:
@@ -2170,12 +2171,14 @@ components:
           type: string
           minLength: 1
           maxLength: 255
+          example: aede8743-1bb8-407d-a975-77f3085a0d76
         permissions:
           type: array
           items:
             type: string
             minLength: 0
             maxLength: 255  
+            example: READ, WRITE, ARCHIVE
 
     SharedObjects:
       description: A list of shared objects
